--- a/src/config.yml
+++ b/src/config.yml
@@ -1,7 +1,7 @@
 #~-~-~-~-~-~-~-~-~-~-~-~~-~-~-~~#
 #                               #
 #          FunnyGuilds          #
-#        1.5.5 Sweetness        #
+#        1.5.6 Sweetness        #
 #                               #
 #~-~-~-~-~-~-~-~-~-~-~-~~-~-~-~~#
 
@@ -142,7 +142,7 @@ player-list:
   
   25: '&71. &b{GTOP-1}'
   26: '&72. &b{GTOP-2}'
-  27: '&73: &b{GTOP-3}'
+  27: '&73. &b{GTOP-3}'
   
   32: '&bTop 3 Graczy'
   
