--- a/resource/messages.yml
+++ b/resource/messages.yml
@@ -56,6 +56,8 @@ helpList:
 - '&a/baza &8- &7Teleportuje do bazy gildii'
 - '&a/powieksz &8- &7Powieksza teren gildii'
 - '&a/przedluz &8- &7Przedluza waznosc gildii'
+- '&a/lider [gracz] &8- &7Oddaje zalozyciela gildii'
+- '&a/zastepca [gracz] &8- &7Nadaje zastepce gildii'
 - '&a/sojusz [tag] &8- &7Pozwala nawiazac sojusz'
 - '&a/opusc &8- &7Opuszcza gildie'
 - '&a/wyrzuc [gracz] &8- &7Wyrzuca gracza z gildii'
