--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="H:/Library/[1.7.2 R3] CraftBukkit.jar"/>
+	<classpathentry kind="lib" path="H:/Projects/Java/Bukkit/Library/[1.7.2 R3] CraftBukkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
