--- a/resource/plugin.yml
+++ b/resource/plugin.yml
@@ -1,6 +1,6 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: 2.5.2 Valor
+version: 2.7 Valor Beta
 author: Dzikoysk
 website: http://www.dzikoysk.net/
 permissions:
