--- a/resource/plugin.yml
+++ b/resource/plugin.yml
@@ -1,6 +1,6 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: 3.0.2 Christmas
+version: 3.5 NewYear
 author: Dzikoysk
 website: http://www.dzikoysk.net/
 permissions:
