--- a/resource/config.yml
+++ b/resource/config.yml
@@ -1,7 +1,7 @@
 ﻿#~-~-~-~-~-~-~-~-~-~-~-~~-~-~-~~#
 #                               #
 #          FunnyGuilds          #
-#         3.5.1 NewYear         #
+#          3.9 Cleaned          #
 #                               #
 #~-~-~-~-~-~-~-~-~-~-~-~~-~-~-~~#
 
