--- a/resource/plugin.yml
+++ b/resource/plugin.yml
@@ -1,6 +1,6 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: 3.5.1 NewYear
+version: 3.9 Cleaned
 author: Dzikoysk
 website: http://www.dzikoysk.net/
 permissions:
