--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resource"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="H:/Libs/[1.7.2 R3] CraftBukkit.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Panda"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
