--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,15 @@
             <artifactId>sportbukkit</artifactId>
             <version>1.8-R0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.10.3.Final</version>
+        </dependency>
     </dependencies>
 </project>
