--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.dzikoysk</groupId>
-    <artifactId>FunnyGuilds-Reloaded</artifactId>
+    <artifactId>funnyguilds-reloaded</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -45,7 +45,7 @@
 
         <dependency>
             <groupId>net.dzikoysk</groupId>
-            <artifactId>Panda</artifactId>
+            <artifactId>panda</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
