--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,9 @@
 name: FunnyGuilds
 main: net.dzikoysk.funnyguilds.FunnyGuilds
-version: 3.9.9.1 Cleaned
+version: 4.0 Quantum
 author: Dzikoysk
 website: http://www.dzikoysk.net/
+loadbefore: [WorldEdit]
 permissions:
     funnyguilds.*:
         default: op
